--- a/about.html
+++ b/about.html
@@ -21,16 +21,17 @@
                 <figure>
                     <img src="images/me.png" class="avatar" alt="picture-of-myself">
                 </figure>
-                <section>
+                <article>
                     <p>Based in the Netherlands, <strong>Vlad Ciutacu</strong> is an aspiring 19-year old photographer who already experienced the photography work environment so far by working for several magazines and retail-based stores.</p>
 
                     <aside>
                         <p><strong>Now, a little story about myself...</strong></p>
                     </aside>
-
-                    <p>This whole passion started back when I was passionate about film-cameras while a child, and it took off to the point where I had officially booked my first gig, a concert I had to photograph. After that, the future started opening up new opportunities such as doing commissioned work for different companies. Right now, the focus is set on experimenting the most with natural light, although shooting in a studio is one of the next priorities on the list.</p>
-                </section>
-                    <iframe class="video" src="https://www.youtube.com/embed/_jfHalX5atA?list=PLHiuMw9rL2ou9rPPkWafWjEG8GEbv2EJw?ecver=2" frameborder="0"" allowfullscreen></iframe>
+                    <section>
+                        <p>This whole passion started back when I was passionate about film-cameras while a child, and it took off to the point where I had officially booked my first gig, a concert I had to photograph. After that, the future started opening up new opportunities such as doing commissioned work for different companies. Right now, the focus is set on experimenting the most with natural light, although shooting in a studio is one of the next priorities on the list.</p>
+                    </section>
+                </article>
+                <iframe class="video" src="https://www.youtube.com/embed/_jfHalX5atA?list=PLHiuMw9rL2ou9rPPkWafWjEG8GEbv2EJw?ecver=2" frameborder="0"" allowfullscreen></iframe>
             </div>
 
         </div>
