portfolio class fix + css
almost final…
footer acting weird on small resolution, shows up normal in full screen
tho

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                     <li>
                         <a class="rig-cell" href="#">
                             <figure>
-                                <img class="category1" src="images/category1.JPG" />
+                                <img class="category" src="images/category1.JPG" />
                                 <span class="rig-overlay"></span>
                                 <span class="rig-text">Comissioned Work</span>
                             </figure>
@@ -31,7 +31,7 @@
                         
                         <a class="rig-cell" href="#">
                             <figure>
-                                <img class="category1" src="images/category2.JPG" />
+                                <img class="category" src="images/category2.JPG" />
                                 <span class="rig-overlay"></span>
                                 <span class="rig-text">The Netherlands</span>
                             </figure>
@@ -42,7 +42,7 @@
                 <ul id="rig">                    
                         <a class="rig-cell" href="#">
                             <figure>
-                                <img class="category1" src="images/category3.JPG" />
+                                <img class="category" src="images/category3.JPG" />
                                 <span class="rig-overlay"></span>
                                 <span class="rig-text">Experiments</span>
                             </figure>
@@ -50,7 +50,7 @@
                         
                         <a class="rig-cell" href="#">
                             <figure>
-                                <img class="category1" src="images/category4.JPG" />
+                                <img class="category" src="images/category4.JPG" />
                                 <span class="rig-overlay"></span>
                                 <span class="rig-text">Sneaker Industry </span>
                             </figure>
