--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <div id="wrapper" class="wrapper">
+        <div id="wrapper" class="wrapper about-wrapper">
             <header id="header" class="header">
                 <nav class="navbar">
                     <a href="contact.html">Contact</a>
